--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Assignment Solution for Module 2 Title</title>
     <meta content="width=device-width, initial-scale=1" name="viewport" />
 
-    <link rel="stylesheet" href="m2s.css" >
+    <link rel="stylesheet" href="CSS/M2S.css" >
   </head>
 
   <head>
